--- a/css/style.css
+++ b/css/style.css
@@ -454,7 +454,7 @@ table {
 /* ==========================================================================Hero========================================================================== */
 .hero {
 	
-	background: url('/personal-website/img/bvc-pics/playb2-removebg.png') right bottom no-repeat;
+	background: url('img/bvc-pics/playb2-removebg.png') right bottom no-repeat;
 	background-size: contain;
 	padding:110px 0 100px 0;
 	height:auto;
@@ -564,7 +564,7 @@ h1.arrow {
 	text-transform:uppercase;
 	color:#353535;
 	letter-spacing: 4px;
-	background:url('../img/h1-bg.png') no-repeat center bottom;
+	background:url('img/h1-bg.png') no-repeat center bottom;
 	padding-bottom:30px;
 	font-weight: bold;
 }
@@ -1106,7 +1106,7 @@ ul.slides li {
 	-webkit-animation-delay:1s;
 }
 .wp3 {
-	background:url('../img/iphone-bg.png') no-repeat center center;
+	background:url('img/iphone-bg.png') no-repeat center center;
 	background-position:200px 10px;
 	height: 100%;
 }
